// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match snapshot for values disabled: false, isLoading: false, variant: secondary and color: success 1`] = `
.c0 {
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  max-width: 10rem;
  width: 100%;
  font-weight: 400;
  cursor: pointer;
  font-size: 0.875rem;
  min-height: 2.1875rem;
  padding: 0.25rem 0.75rem;
  color: #FFF;
  background-color: #18C108;
  border: 1px solid #FFF;
  border-radius: 0.375rem;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
  outline: 1px solid transparent;
}

.c0[disabled] {
  border-color: success;
  color: #6D6D6D;
}

.c0:hover {
  opacity: 0.8;
}

.c0:focus-visible {
  outline-offset: 1px;
  outline: 1px solid #FFF;
}

.c0:active {
  outline: none;
}

<button
  aria-label="button"
  class="c0"
  color="success"
>
  Test Button
</button>
`;

exports[`Button should match snapshot for values disabled: false, isLoading: false, variant: secondary and color: warning 1`] = `
.c0 {
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  max-width: 10rem;
  width: 100%;
  font-weight: 400;
  cursor: pointer;
  font-size: 0.875rem;
  min-height: 2.1875rem;
  padding: 0.25rem 0.75rem;
  color: #FFF;
  background-color: #FD862F;
  border: 1px solid #FFF;
  border-radius: 0.375rem;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
  outline: 1px solid transparent;
}

.c0[disabled] {
  border-color: warning;
  color: #6D6D6D;
}

.c0:hover {
  opacity: 0.8;
}

.c0:focus-visible {
  outline-offset: 1px;
  outline: 1px solid #FFF;
}

.c0:active {
  outline: none;
}

<button
  aria-label="button"
  class="c0"
  color="warning"
>
  Test Button
</button>
`;

exports[`Button should match snapshot for values disabled: true, isLoading: false, variant: primary and color: default 1`] = `
.c0 {
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  max-width: 28.125rem;
  width: 100%;
  font-weight: 600;
  cursor: not-allowed;
  font-size: 1rem;
  min-height: 3.5625rem;
  padding: 0.25rem 0.75rem;
  color: #FFF;
  background-color: #6D6D6D;
  border: 1px solid transparent;
  border-radius: 0.375rem;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
  cursor: not-allowed;
  outline: 1px solid transparent;
}

.c0[disabled] {
  border-color: #6D6D6D;
  color: #FFF;
}

.c0:hover {
  opacity: 0.8;
}

.c0:focus-visible {
  outline-offset: 1px;
  outline: 1px solid #00A8E8;
}

.c0:active {
  outline: none;
}

<button
  aria-label="button"
  class="c0"
  color="default"
  disabled=""
>
  Test Button
</button>
`;

exports[`Button should match snapshot for values disabled: true, isLoading: false, variant: primary and color: transparent 1`] = `
.c0 {
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  max-width: 28.125rem;
  width: 100%;
  font-weight: 600;
  cursor: not-allowed;
  font-size: 1rem;
  min-height: 3.5625rem;
  padding: 0.25rem 0.75rem;
  color: #00A8E8;
  background-color: transparent;
  border: 1px solid #00A8E8;
  border-radius: 0.375rem;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
  cursor: not-allowed;
  outline: 1px solid transparent;
}

.c0[disabled] {
  border-color: #6D6D6D;
  color: #6D6D6D;
}

.c0:hover {
  opacity: 0.8;
}

.c0:focus-visible {
  outline-offset: 1px;
  outline: 1px solid #00A8E8;
}

.c0:active {
  outline: none;
}

<button
  aria-label="button"
  class="c0"
  color="transparent"
  disabled=""
>
  Test Button
</button>
`;

exports[`Button should match snapshot for values disabled: true, isLoading: false, variant: pure and color: default 1`] = `
.c0 {
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  max-width: 10rem;
  width: 100%;
  font-weight: 400;
  cursor: not-allowed;
  font-size: 0.875rem;
  min-height: 2.1875rem;
  padding: 0.25rem 0.75rem;
  color: #FFF;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 0.375rem;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
  cursor: not-allowed;
  outline: 1px solid transparent;
}

.c0[disabled] {
  border-color: default;
  color: #6D6D6D;
}

.c0:hover {
  opacity: 0.8;
}

.c0:focus-visible {
  outline-offset: 1px;
  outline: 1px solid #1C2125;
}

.c0:active {
  outline: none;
}

<button
  aria-label="button"
  class="c0"
  color="default"
  disabled=""
>
  Test Button
</button>
`;

exports[`Button should match snapshot for values disabled: true, isLoading: false, variant: secondary and color: warning 1`] = `
.c0 {
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  max-width: 10rem;
  width: 100%;
  font-weight: 400;
  cursor: not-allowed;
  font-size: 0.875rem;
  min-height: 2.1875rem;
  padding: 0.25rem 0.75rem;
  color: #FFF;
  background-color: #6D6D6D;
  border: 1px solid #FFF;
  border-radius: 0.375rem;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
  cursor: not-allowed;
  outline: 1px solid transparent;
}

.c0[disabled] {
  border-color: warning;
  color: #6D6D6D;
}

.c0:hover {
  opacity: 0.8;
}

.c0:focus-visible {
  outline-offset: 1px;
  outline: 1px solid #FFF;
}

.c0:active {
  outline: none;
}

<button
  aria-label="button"
  class="c0"
  color="warning"
  disabled=""
>
  Test Button
</button>
`;
